Update user right module

--- a/assignment-1/31-08-2021/index4.html
+++ b/assignment-1/31-08-2021/index4.html
@@ -13,7 +13,7 @@
 		}
 			.company-logo{
 				float:left;
-				margin:10px;
+				margin-left:10px;
 			}
 			.ul-wrapper{
 				float:right;
@@ -316,7 +316,7 @@
 					<p class="title">CEO and Founder</p>
 					<p class="bio">
 						that it has a more-or-less normal distribution of letters, that it has a more-or-less normal distribution of letters, 
-					</p>
+					</p> 
 					<button class="Contact-button">
 						Contact
 					</button>
