Working on Asignment1.

--- a/assignment-1/31-08-2021/index4.html
+++ b/assignment-1/31-08-2021/index4.html
@@ -23,7 +23,7 @@
 				letter-spacing:6px;
 				margin-right:23px;
 				font-size:17px;
-				font-weight:;
+				font-weight:normal;
 				font-weight:500;
 			}
 			.clear {
@@ -41,7 +41,6 @@
 			margin-bottom:20px;
 		 }
 
-		 }
 		 .project-img-wrapper {
 			margin:20px 20px 20px 0px;
 		 }
