--- a/assignment-5/index.html
+++ b/assignment-5/index.html
@@ -7,24 +7,25 @@
 				margin:0px;
 				padding:0px;
 			}
-			
-			
 			.maindiv{
 				position:relative;
 				border:3px solid #000000;
-				height:500px;
-				width:750px;
+				height:600px;
+				width:1000px;
 				margin:150px;
 			}	
-			
 			.subdiv{
 				position:absolute;
 				border:3px solid #000000;
 				height:200px;
-				width:350px;
-				margin:25px;
-				left:172px;
-				top:115px;
+				margin: auto;
+				width:400px;
+				top:0;
+				right:0;
+				bottom:0;
+				left:0;
+				
+				
 			}	
 		</style>
 	</head>
