--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -27,7 +27,7 @@
 				letter-spacing:6px;
 				margin-right:23px;
 				font-size:17px;
-				font-weight:;
+				font-weight:normal;
 				font-weight:500;
 			}
 			.clear {
@@ -45,7 +45,7 @@
 			margin-bottom:20px;
 		 }
 
-		 }
+		 
 		 .project-img-wrapper {
 			margin:20px 20px 20px 0px;
 		 }
