--- a/09-09-2021/Assignment-1/index.html
+++ b/09-09-2021/Assignment-1/index.html
@@ -45,7 +45,7 @@
 				height: 150px;
 				width: 150px;
 				border: 2px solid #000000;
-				bottom: 3%;
+				top: %;
 				right: 3%;
 			}
 	</style>
