--- a/assignment-1/index4.html
+++ b/assignment-1/index4.html
@@ -1,270 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 		<title>
 			html template
 		</title>
-		<style>
-			* {
-				margin:0px;
-				padding:0px;
-				color:#000000;
-			}
-			body {
-				font-family:arial;
-				margin:0 auto;
-				
-				}
-				.main-wrapper{
-					max-width:1366px;
-					margin:auto;
-					padding-left:20px;
-					padding-right:20px;
-				}			
-			.company-logo {
-				float:left;
-			}
-			.header-wrapper{
-			max-width:1366px;
-			margin:auto;
-			padding:20px 20px;
-
-			}
-			.ul-wrapper {
-				float:right;
-			}
-			.ul-wrapper ul li {
-				display:inline-block;
-				letter-spacing:6px;	
-				margin-right:20px;
-				font-size:17px;
-				font-weight:500;
-				color:#000000;
-			}
-			.clear {
-				clear:both;
-			}
-			.header-banner-wrapper{
-				text-align:center;
-			}
-			.header-banner{
-				height:750px;
-				width:100%;
-				position:relative;
-				top:0;
-				left:0;
-			}
-			.company-name{
-					margin: 0 auto;
-					position:absolute;
-					top: 50%;
-					left:0;
-					right: 0;
-					bottom:0;
-			}
-		 .project-section-heading {
-				font-size:25px;
-				margin-top:70px;
-				margin-bottom:70px;
-				font-weight: normal;
-			}
-		 .project-section-img-wrapper {
-				max-width:100%;
-				padding:17px 0px 0px 0px;
-		    }
-		 .project-img img {
-				max-width:24%;
-				max-height:240px;
-				float:left;
-			}
-		.project-img1 img {
-			max-width:24%;
-			max-height:240px;
-			float:left;
-			margin-left:17px;
-			
-		}	 
-		.project-img2 img {
-				max-width:24%;
-				max-height:240px;
-				float:left;
-				margin-left:17px;
-			}
-		.project-img3 img {
-				max-width:24%;
-				max-height:240px;
-				float:left;				
-				margin-left:17px;
-			}				
-		.project-img4 img {
-				max-width:24%;
-				max-height:240px;
-				float:left;
-			}
-		.project-img5 img {
-				max-width:24%;
-				max-height:240px;
-				float:left;
-				margin-left:17px;
-			}		
-		.project-img6 img {
-				max-width:24%;
-				max-height:240px;
-				float:left;
-				margin-left:17px;
-			}		
-		.project-img7 img {
-				max-width:24%;
-				max-height:240px;
-				float:left;
-				margin-left:17px;
-			}
-		 .About-section-heading {
-				font-size:25px;
-				margin-top:80px;
-				margin-bottom:22px;
-				font-weight: normal;
-			}
-		 .About-section-sub-paragraph {
-				font-size:14px;
-				line-height:1.4;
-				margin-top:20px;
-				margin-bottom:20px;
-			}
-		 .person-information-img {
-				max-width:23%;
-				float:left;
-			}
-		 .person-information-img img {
-				max-width:330px;
-				font-size:23px;
-				font-weight:400;
-			} 
-		 .title {
-				margin-top:20px;
-				color:grey;
-				margin-bottom:20px;
-			} 
-		 .bio {
-				line-height:20px;
-				font-size:15px;
-				margin-bottom:10px;
-				font-weight: normal;
-			}
-		 .person-information-img1 {
-				max-width:23%;
-				margin-left:30px;
-				float:left;
-			}
-			 .person-information-img1 img {
-				max-width:330px;
-			}
-		 .About-section-img-wrapper img {
-				max-height:240px;
-			}
-		 .name{
-				margin-top:10px;
-				font-size:23px;
-				font-weight: normal;
-			}
-		 .title {
-				margin-top:10px;
-				color:grey;
-				margin-top:20px;
-				margin-bottom:20px;
-				font-weight: normal;
-			}
-		 .bio {
-				line-height:1.4;
-				font-size:15px;
-				margin-bottom:15px;
-				font-weight: normal;
-			}
-		 .Contact-button {
-				max-width:98%;
-				border:none;
-				text-decoration:none;
-				color:#000000;
-				text-align:center;
-				background-color:#EDEDED;
-				padding-left:42%;
-				padding-right:42%;
-				padding-top:5px;
-				padding-bottom:5px;
-			}
-		 .person-information-img2 {
-				max-width:23%;
-				margin-left:30px;
-				float:left;
-			}
-		 .person-information-img2 img {
-				max-width:330px;
-			}
-		  .person-information-img3 {
-				max-width:22%;
-				float:left;
-				margin-left:30px;
-			}
-		 .person-information-img3 img {
-				max-width:331px;
-			
-			}
-		  .contact-section-heading {
-				font-size:25px;
-				margin-top:95px;
-				margin-bottom:25px;
-				font-weight: normal;
-			}
-		  .contact-section-sub-paragraph {
-				font-size:16px;
-				line-height:20px;
-				margin-top:20px;
-			}
-		 .form-input {
-				 width:99%;
-				 padding-top:10px;
-				 padding-bottom:10px;
-				 padding-left:8px;
-				 margin-top:15px;
-				 border:2px solid #EDEDED;
-			}		 
-		 .button-wrapper{
-				margin-top:30px;
-				margin-top:45px;
-			}
-		 .button{
-				padding:10px;
-				color:#ffffff;
-				background-color:#000000;
-				text-decoration:none;
-				text-transform: uppercase;
-			}
-		 .footer-banner-wrapper img {
-				width:100%;
-				margin-top:50px;
-				margin-bottom:10px;
-			}
-		 .footer {
-				background-color:#000000;
-				color:#ffffff;
-				text-align:center;
-				padding-top:30px;
-				padding-bottom:30px;
-				margin:0px;
-			}
-			.footer a {
-				text-decoration:none;
-				color:white;
-			}
-			.hr {
-			width:100%;
-				color:grey;
-			}
-			a:link{
-				text-decoration: none;
-				color:#000000;
-			}
-		</style>
+		<link rel="stylesheet" href="css/style.css"> 
 	</head>
 	<body>
 	<!-- header section start here-->
@@ -272,7 +13,7 @@
 		<div class="header-wrapper">
 			<div class="company-logo">
 				<a href="https://geexu.in/" target="_blank" >
-					<img src="New Project2.jpg"  alt="company-logo"/>
+					<img src="images/New Project2.jpg"  alt="company-logo"/>
 				</a>
 			</div>
 				<div class="ul-wrapper">
@@ -299,46 +40,53 @@
 		<!--header wrapper section end here -->
 		<!--header banner section start here -->
 		<div class="header-banner-wrapper">
-						<img src="image5.jpeg" alt="header-banner"  class="header-banner"/> 
+				<img src="images/image5.jpeg" alt="header-banner"  class="header-banner"/> 
 				<a href="https://geexu.in/" target="_blank" >
-					<img src="New Project2.jpg"  alt="company-logo" class="company-name"/>
+					<img src="images/New Project2.jpg"  alt="company-logo" class="company-name"/>
 				</a>
 		</div>
 		<!--header banner sectionn end here -->
 		<!-- header section end here-->	
 		<!-- Project section end here-->	
 		<div class="main-wrapper">
-			<h1 class="project-section-heading">Project</h1>
-			<hr class="hr" />
+		<div class="project-section-heading">
+			<h1>Project</h1>
+			</div>
 		<!--projesct image section start here-->
 		<div class="project-section-img-wrapper">  
 			<div class="project-img">
-				<img src="image1.jpeg" alt="project-img" />
+				<img src="images/image1.jpeg" alt="project-img" />
+				<div class="image-name">
+					Summer House
+				</div>
 			</div>
 			<div class="project-img1">
-				<img src="image1.jpeg"  alt="project-img1"/>
+				<img src="images/image1.jpeg"  alt="project-img1"/>
+					<div class="image-name">
+						Summer House
+					</div>
 			</div>
 			<div class="project-img2">
-				<img src="image1.jpeg" alt="project-img2" />
+				<img src="images/image1.jpeg" alt="project-img2" />
 			</div>
 			<div class="project-img3">
-				<img src="image1.jpeg" alt="project-img3"/>
+				<img src="images/image1.jpeg" alt="project-img3"/>
 			</div>
 			<div class="clear"></div>
 		</div>
 		
-		<div class="project-section-img-wrapper">  
+		<div class="project-section-img-wrapper1">  
 			<div class="project-img4">
-				<img src="image1.jpeg" alt="project-img4" />
+				<img src="images/image1.jpeg" alt="project-img4" />
 			</div>
 			<div class="project-img5">
-				<img src="image1.jpeg" alt="project-img5" />
+				<img src="images/image1.jpeg" alt="project-img5" />
 			</div>
 			<div class="project-img6">
-				<img src="image1.jpeg"  alt="project-img6"/>
+				<img src="images/image1.jpeg"  alt="project-img6"/>
 			</div>
 			<div class="project-img7">
-				<img src="image1.jpeg" alt="project-img7" />
+				<img src="images/image1.jpeg" alt="project-img7" />
 			</div>
 		</div>
 		<div class="clear">
@@ -346,14 +94,16 @@
 		<!--project image end here -->
 		<!-- Project section end here-->
 		<!-- About section start here -->
-		<h1 class="About-section-heading"> About </h1>
-		<hr class="hr"/>
+		<div class="About-section-heading">
+		<h1> About </h1>
+		</div>
 		<p class="About-section-sub-paragraph">
 			It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishingLorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here
 		</p>
 		<div class="About-section-img-wrapper">
-			<div class="person-information-img">
-					<img src="image3.jpeg" alt="about-img"/>
+		<!-- Person information start here-->
+			<div class="person-information">
+					<img src="images/image3.jpeg" alt="about-img"/>
 					<h3 class="name">John Doe</h3>
 					<h3 class="title">CEO and Founder</h3>
 					<p class="bio">
@@ -363,8 +113,9 @@
 							Contact
 					</a>
 			</div>
-			<div class="person-information-img1" alt="about-img1">
-					<img src="image3.jpeg" />
+			<!--Frist Person information start here -->
+			<div class="person-information-1" alt="about-img1">
+					<img src="images/image3.jpeg" />
 					<h3 class="name">John Doe</h3>
 					<h3 class="title">CEO and Founder</h3>
 					<p class="bio">
@@ -374,8 +125,9 @@
 						Contact
 					</a>
 			</div>
-			<div class="person-information-img2">
-					<img src="image3.jpeg" alt="about-img2" />
+			<!--Second person information start here -->
+			<div class="person-information-2">
+					<img src="images/image3.jpeg" alt="about-img2" />
 					<h3 class="name">John Doe</h3>
 					<h3 class="title">CEO and Founder</h3>
 					<p class="bio">
@@ -385,8 +137,9 @@
 						Contact
 					</a>
 			</div>
-			<div class="person-information-img3">
-					<img src="image3.jpeg" alt="about-img3"/>
+			<!-- Third Person information start here-->
+			<div class="person-information-3">
+				<img src="images/image3.jpeg" alt="about-img3"/>
 					<h3 class="name">John Doe</h3>
 					<h3 class="title">CEO and Founder</h3>
 					<h3 class="bio">
@@ -398,10 +151,12 @@
 			</div>
 			<div class="clear"></div>
 		</div>
+		<!--Person information end here -->
 		<!-- About section end here-->
 		<!--contact section start here-->
-		<p class="contact-section-heading">Contact</p>
-		<hr class="hr" />
+		<div  class="contact-section-heading">
+			<h1>Contact</h1>
+		</div>
 		<div class="contact-section-wrapper">
 			<p class="contact-section-sub-paragraph">
 				Lets get in touch and talk about your next project.
@@ -413,17 +168,15 @@
 					<input type="text" placeholder="Subject"	class="form-input" />
 					<input type="text" placeholder="comment"	class="form-input" />
 					<div class="button-wrapper">
-						<a href="https://geexu.in/" target="_blank" class="button">
-							Send message
-						</a>
+						<input type="submit" value="Send message" class="submit" />
 					</div>
-					</form>
+				</form>
 			</div>
 		</div>
 		<!-- Contact section end here-->
 		<!-- Footer banner section start here-->
 		<div class="footer-banner-wrapper">
-			<img src="image4.jpeg" />
+			<img src="images/image4.jpeg" />
 		</div>	
 	</div>
 			<div class="footer">
@@ -432,7 +185,6 @@
 					w3.css
 				</a>
 			</div>
-		
 	</body>
 
 </html>
