--- a/html-practices/html-tamplet-assignment-1/backup files/backup.html
+++ b/html-practices/html-tamplet-assignment-1/backup files/backup.html
@@ -5,7 +5,7 @@
 		<title>
 			html template
 		</title>
-				<link rel="stylesheet" href="css/style.css"> 
+				<link rel="stylesheet" href="css/backup.css"> 
 	</head>
 	<body>
 	<!-- header section start here-->
