--- a/practice-tamplate/assignment-1/index.html
+++ b/practice-tamplate/assignment-1/index.html
@@ -2,43 +2,43 @@
 <html>
 	<head>
 		<title>
-			Green Building
+			assignment-1
 		</title>
-		<link rel=" stylesheet" href="assets/css/style.css" />
+		<link rel=" stylesheet" href="assets/css/style.css"/>
 	</head>
 	<body>   
-		<div class=" tamplet-wrapper">
-			<div class="header-wrapper">
-				<div class=" header">
-					<div class="logo">
+		<!--nav section start here -->
+			<div class="navigation-section">
+				<div class="nav-logo-wrapper">
+					<div class="nav-logo" alt="company-logo">
 						<a href="https://www.geexu.in/" target="_blank">
 							<img src="assets/images/image3.jpg"/>
 						</a>
 					</div>
 					<div class="ul-wrapper">
 						<ul>
-							<li>
-								<a href="https://www.geexu.in/" target ="_blank" >
+							<li class="nav-item">
+								<a href="https://www.geexu.in/" target ="_blank" class="nav-link">
 									Page 1
 								</a>
 							</li> 
-							<li>
-								<a href="https://www.geexu.in/" target="_blank">
+							<li class="nav-item">
+								<a href="https://www.geexu.in/" target="_blank" class="nav-link">
 									Page 2
 								</a>
 							</li>		
-							<li>
-								<a href="https://www.geexu.in/"  target="_blank">
+							<li class="nav-item">
+								<a href="https://www.geexu.in/"  target="_blank" class="nav-link">
 									Home
 								</a>
 							</li>
-							<li>
-								<a  class="active" href="https://www.geexu.in/"  target="_blank">
+							<li class="nav-item">
+								<a class="active" href="https://www.geexu.in/"  target="_blank" class="nav-link">
 									About
 								</a>
 							</li>
-							<li>
-								<a href="https://www.geexu.in/"  target="_blank">
+							<li class=" nav-item">
+								<a href="https://www.geexu.in/"  target="_blank" class="nav-link">
 									Contact
 								</a>
 							</li>
@@ -55,8 +55,8 @@
 				</div>
 				<div class="section-2">
 						<div class="main-section">
-							<div class="image-wrapper">
-							<img src="assets/images/image2.jpg" alt="engineer"/>
+							<div class="header-banner-wrapper">
+								<img src="assets/images/image4.jpg" alt="engineer"/>
 							</div>
 							<h3 class="parent-name">
 								building technoogies
@@ -71,10 +71,10 @@
 								of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors 
 							</p>
 							<p class="parent-company">  
-							Image form <a href="https://www.geexu.in/" id="link">Freepik</a>
+								Image form <a href="https://www.geexu.in/" class="link">Freepik</a>
 							</p>
 							<div class="button" >
-							<a href="https://www.geexu.in/"   target="_blank">
+								<a href="https://www.geexu.in/" target="_blank" class="button-link">
 									read more
 								</a>
 							</div>
@@ -85,17 +85,17 @@
 		<!--header section end here-->
 		<!--footer section start here-->
 		<div class="footer">
-				Sample text. Click to select the text. Click again and double  <br/> click to start eding to text
-				<p class="website-link ">
-					<a href="https://www.geexu.in/"  target="_blank">
+				Sample text. Click to select the text. Click again and double   click to start eding to text
+				<p class="website-link">
+					<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
 						Website Tamplets
 					</a> 
 					 created with 
-					<a href="https://www.geexu.in/"  target="_blank">
+					<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
 						website Builder Softwear	
 					</a>
 				</p>
 			</div>
-		</div>
+		<!--footer section end here-->
 	</body>
 </html>
