changes in practice tamplate assignment

--- a/practice-tamplate/assignment-3/index.html
+++ b/practice-tamplate/assignment-3/index.html
@@ -42,10 +42,11 @@
 						</a>
 					</li>
 				</ul>
-				<div class=" clear"></div>
 			</div>
+			<div class=" clear"></div>
 		</div>
 		<!--nav section end here-->
+		<!--header section start here-->
 			<div class="header-section-wrapper">
 				<div class="sub-header-section1">
 				</div>
@@ -76,8 +77,10 @@
 						</div>
 					</div>
 			</div>
+			<!--header section end here-->
 			<div class="footer">
-				Sample text. Click to select the text. Click again and double   click to start eding to text
+				<p class="footer-text">Sample text. Click to select the text. Click again and double  </p>
+				click to start eding to text
 				<p class="website-footer-link">
 					<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
 						Website Tamplets
@@ -88,5 +91,6 @@
 					</a>
 				</p>
 			</div>
+		</div>
 	</body>
 </html>
