--- a/20-09-2021/green-building-tamplet/index.html
+++ b/20-09-2021/green-building-tamplet/index.html
@@ -2,96 +2,92 @@
 <html>
 	<head>
 		<title>
-			Green Building
+			Green Bulding			
 		</title>
-		<link rel=" stylesheet" href="assets/css/style.css" />
+		<link rel="stylesheet" href="assets/css/style.css"/>
 	</head>
-	<body>   
-		<div class=" tamplet-wrapper">
-			<div class="header-wrapper">
-				<div class=" header">
-					<div class="logo">
-						<a href="https://www.geexu.in/" target="_blank">
-							<img src="assets/images/image3.jpg"/>
-						</a>
-					</div>
-					<div class="ul-wrapper">
-						<ul>
-							<li>
-								<a href="https://www.geexu.in/" target ="_blank" >
-									Page 1
-								</a>
-							</li> 
-							<li>
-								<a href="https://www.geexu.in/" target="_blank">
-									Page 2
-								</a>
-							</li>		
-							<li>
-								<a href="https://www.geexu.in/"  target="_blank">
-									Home
-								</a>
-							</li>
-							<li>
-								<a  class="active" href="https://www.geexu.in/"  target="_blank">
-									About
-								</a>
-							</li>
-							<li>
-								<a href="https://www.geexu.in/"  target="_blank">
-									Contact
-								</a>
-							</li>
-						</ul>
-					</div>
-					<div class="clear"></div>
-				</div>
+	<body>
+	<!--nav section start here-->
+	<div>
+		<div class="nav-section-wrapper">
+			<div class="nav-logo-wrapper">
+				<a href="https://www.geexu.in/	">
+				
+					<img src="assets/images/image3.jpg" alt="nav-logo" class="nav-logo" />
+				</a>
 			</div>
-			<!--nav section end here-->
-		<div class=" tamplate-wrapper">
-		<!-- header section wrapper start here -->
-			<div class="section-wrapper">
-				<div class="section-1">
+			<div class="nav-item-wrapper">
+				<ul class="ul-wrapper">
+					<li class="nav-item">
+						<a href="https://www.geexu.in/" class="nav-link">
+							Page-1
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.geexu.in/" class="nav-link">
+							Page-2
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.geexu.in/" class="nav-link">
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a  class="active"href="https://www.geexu.in/" class="nav-link">
+							About
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.geexu.in/" class="nav-link">
+							Contact
+						</a>
+					</li>
+				</ul>
+				
+			</div>
+			<div class=" clear"></div>
+		</div>
+		<!--nav section end here-->
+			<div class="header-section-wrapper">
+				<div class="sub-header-section1">
 				</div>
-				<div class="section-2">
-						<div class="main-section">
-							<div class="image-wrapper">
-							<img src="assets/images/image2.jpg" alt="engineer"/>
-							</div>
-							<h3 class="parent-name">
-								building technoogies
-							</h3>
-							<h1 class="company-name">
-								green
+				<div class="sub-header-section2">
+					<div class="main-header">
+						<div class="header-banner-wrapper">
+							<img src="assets/images/image4.jpg" alt="engineer"/>
+						</div>
+						<h3 class="sub-company-name">
+							building technoogies
+						</h3>
+						<h1 class="company-name">
+							green
 							<span class="name">
 								building
 							</span>
-							</h1>
-							<p class="company-bio"> 
-								of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors 
-							</p>
-							<p class="parent-company">  
-							Image form <a href="https://www.geexu.in/" id="link">Freepik</a>
-							</p>
-							<div class="button" >
-							<a href="https://www.geexu.in/"   target="_blank">
-									read more
-								</a>
-							</div>
+						</h1>
+						<p class="company-bio"> 
+							of letters, as opposed to using 'Content here, content here', making it look like readableEnglish. Many desktop publishing packages and web page editors 
+						</p>
+						<p class="website-name">  
+							Image form <a href="https://www.geexu.in/" class="website-link">Freepik</a>
+						</p>
+						<div class="button" >
+							<a href="https://www.geexu.in/" target="_blank" class="button-link">
+								read more
+							</a>
 						</div>
-				</div>
+					</div>
 			</div>
-		</div>
-		<!--header section end here-->
-		<!--footer section start here-->
-		<div class="footer">
-				Sample text. Click to select the text. Click again and double  <br/> click to start eding to text
-				<p class="website-link ">
-					<a href="https://www.geexu.in/"  target="_blank">
+			<div class="footer">
+				<p class="footer-text">Sample text. Click to select the text. Click again and double  </p>
+				click to start eding to text
+				<p class="website-footer-link">
+					<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
 						Website Tamplets
 					</a> 
 					 created with 
-					<a href="https://www.geexu.in/"  target="_blank">
+					<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
 						website Builder Softwear	
 					</a>
 				</p>
