--- a/practice-tamplate/assignment-6/index.html
+++ b/practice-tamplate/assignment-6/index.html
@@ -7,14 +7,14 @@
 		<link rel="stylesheet" href="assets/css/style.css"/>
 	</head>
 	<body>
-			<!-- navigation section start here-->
+	<!--nav section start here-->
 		<div class="nav-section-wrapper">
 			<div class="nav-logo-wrapper">
-				<a href="https://www.geexu.in/">
+				<a>
 					<img src="assets/images/image3.jpg" alt="nav-logo" class="nav-logo" />
 				</a>
 			</div>
-				<div class="nav-item-wrapper">
+			<div class="nav-item-wrapper">
 				<ul class="ul-wrapper">
 					<li class="nav-item">
 						<a href="https://www.geexu.in/" class="nav-link">
@@ -32,8 +32,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a 
-						class="active"href="https://www.geexu.in/" class="nav-link">
+						<a  class="active"href="https://www.geexu.in/" class="nav-link">
 							About
 						</a>
 					</li>
@@ -43,66 +42,54 @@
 						</a>
 					</li>
 				</ul>
+				
 			</div>
-			<div class="clear"></div>
+			<div class=" clear"></div>
 		</div>
-		<!--navgation section end here-->
-		<!--header section start here -->
-	<div class="tamplate-wrapper">
-		<div class="header-section-wrapper"> 
-			<div class="sub-header1">
-			</div>
-			<div class="sub-header2">
-				<div class="main-header"></div>
-			</div>
-		</div>
-		<div class="section-wrapper">
-			<div class="sub-header-1">
-			
-			</div>
-			<div class="sub-header-2">
-				<div class="main-header">
-					<div class="header-banner-wrapper">
+		<!--nav section end here-->
+			<div class="header-section-wrapper">
+				<div class="sub-header-section1">
+				</div>
+				<div class="sub-header-section2">
+					<div class="main-header">
+						<div class="header-banner-wrapper">
 							<img src="assets/images/image4.jpg" alt="engineer"/>
-					</div>
-					<h3 class="company-heading-name">
+						</div>
+						<h3 class="sub-company-name">
 							building technoogies
-					</h3>
-					<h1 class="company-name">
-						green
-						<span class="sub-company-name">
-							building
-						</span>
-					</h1>
-					<p class="company-bio"> 
-						of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors
-					</p>
-					<p class="website-name">
-						Image form <a href="https://www.geexu.in/" class="website-link">Freepik</a>
-					</p>
+						</h3>
+						<h1 class="company-name">
+							green
+							<span class="name">
+								building
+							</span>
+						</h1>
+						<p class="company-bio"> 
+							of letters, as opposed to using 'Content here, content here', making it look like readableEnglish. Many desktop publishing packages and web page editors 
+						</p>
+						<p class="website-name">  
+							Image form <a href="https://www.geexu.in/" class="website-link">Freepik</a>
+						</p>
 						<div class="button" >
 							<a href="https://www.geexu.in/" target="_blank" class="button-link">
 								read more
 							</a>
 						</div>
-				</div>
+					</div>
+			</div>
+			<div class="footer">
+				<p class="footer-text">Sample text. Click to select the text. Click again and double  </p>
+				click to start eding to text
+				<p class="website-footer-link">
+					<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
+						Website Tamplets
+					</a> 
+					 created with 
+					<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
+						website Builder Softwear	
+					</a>
+				</p>
 			</div>
 		</div>
-	</div>
-	<!--header section end here-->
-	<!--footer section start here-->
-	<div class="footer">
-		Sample text. Click to select the text. Click again and double   click to start eding to text
-		<p class="website-footer-link">
-			<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
-				Website Tamplets
-			</a>
-				created with
-			<a href="https://www.geexu.in/"  target="_blank" class="footer-link">
-				website Builder Softwear	
-			</a>
-		</p>
-	</div>
-	<!--footer section end here-->
 	</body>
 </html>
