--- a/25-09-2021/portfilo-recent-work/index.html
+++ b/25-09-2021/portfilo-recent-work/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>
-			Portfolio Recent Work
+			Green building
 		</title>
-		<link rel="stylesheet" href=" assets/css/style.css"/>
+		<link rel="stylesheet" href="assets/css/style.css "  />
 	</head>
 	<body>
 		<!--navigation section start here-->
