implement semantics tags

--- a/25-09-2021/portfilo-recent-work/index.html
+++ b/25-09-2021/portfilo-recent-work/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Green building
+			Portfilio Recent work
 		</title>
 		<link rel="stylesheet" href="assets/css/style.css "  />
 	</head>
@@ -130,7 +130,7 @@
 					<a href="https://www.geexu.in/" class=" slide-button-1" target="_blank">
 						1
 					</a>
-					<a href="https://www.geexu.in/"class=" slide-button"  target="_blank">
+					<a href=" https://www.geexu.in/"class=" slide-button"  target="_blank">
 						2
 					</a>
 					<a href="https://www.geexu.in/"class=" slide-button"  target="_blank">
@@ -154,10 +154,12 @@
 						My Stuff
 					</h1>
 					<p class=" person-bio">
-						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsany web sites still i
+						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsany web sites still 
 					</p>
 					<button class="stuff-button"> 
-						More Stuff 
+						<a href="https://www.geexu.in/">
+							More Stuff 
+						</a>
 					</button>
 				</div>
 					<div class="stuff-information">
@@ -166,10 +168,12 @@
 						Your Stuff
 					</h1>
 					<p class=" person-bio">
-						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'loremmany web sites still i
+						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'loremmany web sites still 
 					</p>
 					<button class="stuff-button"> 
-						Your Stuff 
+						<a href="https://www.geexu.in/">
+							Your Stuff 
+						</a>
 					</button>
 				</div>
 				<div class="stuff-information">
@@ -178,10 +182,12 @@
 						Our Stuff
 					</h1>
 					<p class=" person-bio">
-						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'loremp many web sites still i
+						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'loremp many web sites still 
 					</p>
 					<button class="stuff-button"> 
-						More Stuff 
+						<a href="https://www.geexu.in/" class="suff-button-link">
+							More Stuff 
+						</a>
 					</button>
 				</div>
 					<div class="clear"></div>
