--- a/28-09-2021/green-building-tamplate/index.html
+++ b/28-09-2021/green-building-tamplate/index.html
@@ -4,41 +4,42 @@
 			<title>
 				Green building
 			</title>
-			<link rel="stylesheet" href="assets/css/style.css "  />
+			<link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
 		</head>
 		<body>
 		<!--header section start here-->
 			<header class="header">
-				<img src="assets/images/image3.jpg" alt="logo" class="company-logo" />
+				<a href=" https://www.geexu.in/" target="_blank">
+					<img src="assets/images/image3.jpg" alt="logo" class="company-logo" />
+				</a>
 				<nav class="navigation">
 					<ul class=" nav_links">
 						<li class="nav-item">
-							<a href=" #" target=" _blank" class="nav-link">
+							<a href=" https://www.geexu.in/" target=" _blank" class="nav-link">
 								Page 1
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href=" #" target=" _blank" class="nav-link">
+							<a href="https://www.geexu.in/" target=" _blank" class="nav-link">
 								Page 2
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href=" #" target=" _blank" class="nav-link">
+							<a href="https://www.geexu.in/" target=" _blank" class="nav-link">
 								Home
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class=" active"href=" #" target=" _blank" class="nav-link">
+							<a class=" active"href="https://www.geexu.in/" target=" _blank" class="nav-link">
 								About
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href=" #" target=" _blank"class="nav-link">
+							<a href="https://www.geexu.in/" target=" _blank"class="nav-link">
 								Contact
 							</a>
 						</li>
 					</ul>
-				
 				</nav>
 					<div class="clear"></div>
 			</header>
@@ -62,7 +63,7 @@
 						</p>
 						<div class="button-wrapper">
 							<button class="button">
-								<a class="button-link" href="#" target="_blank">
+								<a class="button-link" href="https://www.geexu.in/" target="_blank">
 									read more
 								</a>
 							</button>
@@ -74,7 +75,7 @@
 					psum is that orl distribution of letters, as opposed to using 'Contadable content of rs, <p class="footer-text">as opposed to using 'Cont</p>
 				</p>
 				<p class="website-footer-link">
-					<a href="#" class="website-link">Website Tamplets </a> created with<a href="#" class="website-link"> website Builder Softwear</a>
+					<a href="https://www.geexu.in/" class="website-link">Website Tamplets </a> created with<a href="https://www.geexu.in/" class="website-link"> website Builder Softwear</a>
 				</p>
 			</footer>
 		</body>
