--- a/25-09-2021/portfilo-recent-work/index.html
+++ b/25-09-2021/portfilo-recent-work/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<!--navigation section start here-->
-		<div class="nav-main-container">
+		<header class="nav-main-container">
 			<div class="nav-wrapper">
 				<div class="nav-logo-wrapper">
 					<a href="https://www.geexu.in/" target="_blank">
 						<img src="assets/images/image6.jpg"/ alt=" company-logo" class="nav-logo">
 					</a>
 				</div>
-				<div class="nav-item-wrapper">
+				<nav class="nav-item-wrapper">
 					<ul class="ul-wrapper">
 						<li class="nav-item">
 							<a href="https://www.geexu.in/" class="nav-link"  target="_blank">
@@ -40,7 +40,7 @@
 					</div>
 				<div class="clear"></div>
 			</div>
-		</div>	
+		</header>	
 		<!--navgation section end here-->
 		<!--header section start here-->
 		<div class="main-container">
@@ -127,6 +127,9 @@
 			
 			<div class="slide-button-container">
 				<div class=" slide-button-wrapper">
+					<a href=" https://www.geexu.in/"class=" slide-button"  target="_blank">
+						<<
+					</a>
 					<a href="https://www.geexu.in/" class=" slide-button-1" target="_blank">
 						1
 					</a>
@@ -142,6 +145,9 @@
 					<a href="https://www.geexu.in/"class=" slide-button-5"  target="_blank">
 						5
 					</a>
+					<a href=" https://www.geexu.in/"class=" slide-button"  target="_blank">
+						>>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -156,10 +162,8 @@
 					<p class=" person-bio">
 						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsany web sites still 
 					</p>
-					<button class="stuff-button"> 
-						<a href="https://www.geexu.in/">
+					<button class="stuff-button">
 							More Stuff 
-						</a>
 					</button>
 				</div>
 					<div class="stuff-information">
@@ -171,9 +175,7 @@
 						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'loremmany web sites still 
 					</p>
 					<button class="stuff-button"> 
-						<a href="https://www.geexu.in/">
 							Your Stuff 
-						</a>
 					</button>
 				</div>
 				<div class="stuff-information">
@@ -185,9 +187,7 @@
 						ckages and web page editors now use Lorem Ipsum as their default model text, and a search for 'loremp many web sites still 
 					</p>
 					<button class="stuff-button"> 
-						<a href="https://www.geexu.in/" class="suff-button-link">
-							More Stuff 
-						</a>
+							More Stuff
 					</button>
 				</div>
 					<div class="clear"></div>
