--- a/5-10-2021/secretary service tamplate/index.html
+++ b/5-10-2021/secretary service tamplate/index.html
@@ -23,10 +23,15 @@
 					<section class="sub-paragraph">
 						nce the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
 						<span class="web-link">Image form <a href="https://www.geexu.in/" class=" active">freepik</a></span>
-						<button class=" information-button">learn more</button>
+						<a href="https://www.geexu.in/" class="button-link"><button class=" information-button">learn more</button></a>
 					</section>
-					
 				</div>
 		</main>
+		<footer >
+			<section  class="footer-text">
+					Sample text. Click to select the text box. Click again or double<section>click to start editing the text.</section>
+					<section class="website-link"><a href="https://www.geexu.in/"class="link"> Website Templates </a>created with <a href="https://www.geexu.in/"class="link" >Website Builder Software.</section >
+			</section>
+		</footer>
 	</body>
 </html>
