calender assignment changes

--- a/calender-assingment/11-10-2021/index.html
+++ b/calender-assingment/11-10-2021/index.html
@@ -8,25 +8,20 @@
 		<table>
 			<thead>
 				<tr>
-					<th>
-						<img src="assets/images/advertisement-image-1.jpg" alt="advertisement-image-1" class="advertisement-image-1"/>
-					</th>
-					<th  class="calendar-advertisement-section">
-						<img src="assets/images/advertisement-image-3.jpg" alt="advertisement-image-3" class="advertisement-image-3"/>
-						<img src="assets/images/advertisement-image-4.jpg" alt="advertisement-image-4" class="advertisement-image-4"/>
-						<img src="assets/images/advertisement-image-5.jpg" alt="advertisement-image-5" class="advertisement-image-5"/>
-							<img src="assets/images/advertisement-image-6.jpg" alt="advertisement-image-6" class="advertisement-image-6"/>
-						<img src="assets/images/advertisement-image-7.jpg" alt="advertisement-image-7" class="advertisement-image-7"/>
-					</th>
-					<th class="aside-section" >
-						<img src="assets/images/advertisement-image-9.jpg" alt="advertisement-image-9" class="advertisement-image-9"/>
-					</th>
+					<td colspan="7">
+						<img src="assets/images/header-image.jpg" alt="header-image" class="header-image"/>	
+						<img src="assets/images/header-image2.jpg" alt="header-image" class="header-image2"/>	
+					</td>
 				</tr>
+				
 			</thead>
 			<tbody>
 				<tr>
-					<td>	
-						<img src="assets/images/advertisement-image-2.jpg" alt="advertisement-image-2" class="advertisement-image-2"/>
+					<td class="month-name" colspan="2">
+						जानेवारी 	२०२१
+					</td>
+					<td class="marathi-month-name" colspan="1">
+						पौष / माघ शके १९४१
 					</td>
 				</tr>
 			</tbody>
