add display property assignment

--- a/calender-assingment/11-10-2021/index.html
+++ b/calender-assingment/11-10-2021/index.html
@@ -433,7 +433,7 @@
 					<!--aside month fourth row start here-->
 						
 						<tr>
-							<td class="aside-monthweek-heading">
+							<td class="aside-month-week-heading">
 								बु
 							</td>
 							
