create  calender assignment using display property

--- a/calender-assingment/11-10-2021/index.html
+++ b/calender-assingment/11-10-2021/index.html
@@ -81,8 +81,8 @@
 					<div class="aside-items-wrapper">
 						<ul>
 							<li class=" aside-items">....................................१</li>
-							<li class=" aside-items">.................................... २</li>
-							<li class=" aside-items">.................................... ३</li>
+							<li class=" aside-items">................................... २</li>
+							<li class=" aside-items">................................... ३</li>
 							<li class=" aside-items">....................................४</li>
 							<li class=" aside-items">....................................५</li>
 							<li class=" aside-items">.................................... ६</li>
@@ -549,14 +549,14 @@
 							</h2>
 						</div>
 				</td>
-				<td class="days highlight" >
+				<td class="days highlight">
 					<span class="text">पौष शु ६ </span><br/><span class="marathi-month">ख्रिस्ताब्द २०२०</span>
 					
 					<h1 class="days-heading ">
 						६
 					</h1>
 				</td>
-				<td class="days  highlight" >
+				<td class="days highlight3" >
 					<span class="text">पौष शु ६ </span><br/><span class="marathi-month">ख्रिस्ताब्द २०२०</span>
 					
 					<h1 class="days-heading">
